add API information

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       />
     </div>
     <!-- Script -->
+    <script scr="config.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
