fix API failure

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         alt=""
       />
     </div>
-    <!-- Script -->
-    <script scr="config.js"></script>
+    <!-- Scripts -->
+    <script src="config.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
