--- a/index.html
+++ b/index.html
@@ -15,20 +15,7 @@
       <img src="loader.svg" alt="loading" />
     </div>
     <!-- Image Container -->
-    <div class="image-container" id="image-container">
-      <img
-        src="https://images.unsplash.com/photo-1673731215529-a45181460626?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=898&q=80"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1673731215529-a45181460626?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=898&q=80"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1673731215529-a45181460626?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=898&q=80"
-        alt=""
-      />
-    </div>
+    <div class="image-container" id="image-container"></div>
     <!-- Scripts -->
     <script src="config.js"></script>
     <script src="script.js"></script>
